docs: incorporar manual de consumibles
